# tiff

./: .Rbuildignore  .gitignore  DESCRIPTION  NAMESPACE  NEWS  README.md  configure  configure.ac  configure.win  tiff.Rproj
.github/workflows/: check.yml
R/: read.R  write.R
man/: readTIFF.Rd  readTIFFDirectory.Rd  writeTIFF.Rd
src/: Makevars.ucrt  Makevars.win  common.c  common.h  read.c  reg.c  write.c
tests/: testthat.R
tests/testthat/: test_read.R
